# Commandline_Preference_Management

./: .gitignore  .todo  LICENSE  README.md  __init__.py  __main__.py  cli.py  flags.py  freecad_preference_manager.py  main.py  pyproject.toml  runner.py  share  test.py
Commandline_Preference_Management/src/: __init__.py  base.py  commands.py  constants.py  interface.py  invoker.py  utils.py
FreeCAD_Preference_Manager/: __init__.py  autocompleter.py  commands.py  constants.py  models.py
FreeCAD_Preference_Manager/runner/: __init__.py  cli.py  executor.py  utils.py
FreeCAD_Preference_Manager/src/: invoker.py
FreeCAD_Preference_Manager/src/interface/: base.py  preference.py
freecad_preference_manager/: __init__.py  interface.py  invoker.py  models.py
src/: constants.py
tests/: test_cli.py  test_commands.py
